Compatibilidade com a versão 6.2